<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    
  android:orientation="vertical" 
  android:background="@color/white" 
  android:layout_width="fill_parent" 
  android:layout_height="fill_parent" 
  xmlns:android="http://schemas.android.com/apk/res/android">
  
  <RelativeLayout 
        android:orientation="vertical"
        android:background="@color/orange" 
        android:layout_width="fill_parent" 
        android:layout_height="50dip">
        <TextView android:id="@+id/infoTitleText"
            android:layout_centerInParent="true" 
            android:textSize="@dimen/infoTitleSize" 
            android:textColor="@color/white"  
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/infoTitle" />
  </RelativeLayout>
  
  <LinearLayout 
        android:orientation="vertical" 
        android:background="@drawable/shape_bg" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10.0dip" 
        android:layout_marginTop="20.0dip" 
        android:layout_marginRight="10.0dip">
      
      <LinearLayout android:gravity="center_vertical" 
            android:orientation="horizontal" 
            android:layout_width="fill_parent" 
            android:layout_height="50.0dip">
            
          <TextView android:id="@+id/snameText"
                android:textSize="@dimen/infoSize" 
                android:textColor="@android:color/black" 
                android:paddingLeft="15.0dip" 
                android:layout_width="1dp" 
                android:layout_height="wrap_content" 
                android:gravity="right" 
                android:text="@string/sname" 
                android:layout_weight="1"/>
            <EditText android:id="@+id/snameEdit"
                android:textSize="16.0sp" 
                android:textColor="#ff545454"  
                android:background="@android:color/white" 
                android:paddingLeft="10.0dip" 
                android:layout_width="1dp" 
                android:layout_height="wrap_content" 
                android:layout_marginLeft="10.0dip" 
                android:layout_marginRight="15.0dip" 
                android:hint="@string/snameHint" 
                android:inputType="text" 
                android:maxLength="20" 
                android:maxLines="1"
                android:layout_weight="3"/>   
      </LinearLayout>
      
      <View android:background="@drawable/shape_line" 
            android:layout_width="fill_parent" 
            android:layout_height="1.0px" />
      
      <LinearLayout android:gravity="center_vertical" 
            android:orientation="horizontal" 
            android:layout_width="fill_parent" 
            android:layout_height="50.0dip">
            
          <TextView android:id="@+id/ssexText"
                android:textSize="18.0sp" 
                android:textColor="@android:color/black" 
                android:paddingLeft="15.0dip" 
                android:layout_width="1dp" 
                android:layout_height="wrap_content" 
                android:gravity="right" 
                android:text="@string/ssex" 
                android:layout_weight="1"/>
            <Spinner android:id="@+id/ssexSpinner"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingLeft="10.0dip" 
                android:layout_width="1dp"
                android:layout_marginLeft="10.0dip" 
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"/>
      </LinearLayout>
      
      <View android:background="@drawable/shape_line" 
            android:layout_width="fill_parent" 
            android:layout_height="1.0px" />
      
      <LinearLayout android:gravity="center_vertical" 
            android:orientation="horizontal" 
            android:layout_width="fill_parent" 
            android:layout_height="50.0dip">
            
          <TextView android:id="@+id/sageText"
                android:textSize="18.0sp" 
                android:textColor="@android:color/black" 
                android:paddingLeft="15.0dip" 
                android:layout_width="1dp" 
                android:layout_height="wrap_content" 
                android:gravity="right" 
                android:text="@string/sage" 
                android:layout_weight="1"/>
            <Spinner android:id="@+id/sageSpinner"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingLeft="10.0dip" 
                android:layout_marginLeft="10.0dip" 
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"/>
      </LinearLayout>
      
      <View android:background="@drawable/shape_line" 
            android:layout_width="fill_parent" 
            android:layout_height="1.0px" />
      
      <LinearLayout android:gravity="center_vertical" 
            android:orientation="horizontal" 
            android:layout_width="fill_parent" 
            android:layout_height="50.0dip">
            
          <TextView android:id="@+id/sgradeText"
                android:textSize="18.0sp" 
                android:textColor="@android:color/black" 
                android:paddingLeft="15.0dip" 
                android:layout_width="1dp" 
                android:layout_height="wrap_content" 
                android:gravity="right" 
                android:text="@string/sgrade" 
                android:layout_weight="1"/>
            <Spinner android:id="@+id/sgradeSpinner"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingLeft="10.0dip" 
                android:layout_marginLeft="10.0dip" 
                android:layout_marginRight="15.0dip"
                android:layout_weight="3"/>
      </LinearLayout>
      
      <View android:background="@drawable/shape_line" 
            android:layout_width="fill_parent" 
            android:layout_height="1.0px" />
      
      <LinearLayout android:gravity="center_vertical" 
            android:orientation="horizontal" 
            android:layout_width="fill_parent" 
            android:layout_height="50.0dip">
            
          <TextView android:id="@+id/sremarkText"
                android:textSize="@dimen/infoSize" 
                android:textColor="@android:color/black" 
                android:paddingLeft="15.0dip" 
                android:layout_width="1dp" 
                android:layout_height="wrap_content" 
                android:gravity="right" 
                android:text="@string/sremark" 
                android:layout_weight="1"/>
            <EditText android:id="@+id/sremarkEdit"
                android:textSize="16.0sp" 
                android:textColor="#ff545454"  
                android:background="@android:color/white" 
                android:paddingLeft="10.0dip" 
                android:layout_width="1dp" 
                android:layout_height="wrap_content" 
                android:layout_marginLeft="10.0dip" 
                android:layout_marginRight="15.0dip" 
                android:hint="@string/sremarkHint" 
                android:inputType="text" 
                android:maxLength="20" 
                android:maxLines="1"
                android:layout_weight="3"/>   
      </LinearLayout>
      
  </LinearLayout>
  
  <RelativeLayout 
        android:orientation="horizontal"
        android:background="@color/white" 
        android:layout_width="fill_parent" 
        android:layout_marginLeft="20.0dip"  
        android:layout_marginRight="20.0dip"
        android:layout_height="50dip">
      
       <Button android:id="@+id/ssaveBtn"    
            android:textSize="18.0sp" 
            android:textColor="#ff000000"  
            android:background="@anim/save_btn_selector" 
            android:layout_width="150dp" 
            android:layout_height="40dp" 
            android:layout_marginLeft="10.0dip"  
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_alignParentLeft="true"
            android:text="@string/save"/>
       
       <Button android:id="@+id/scancelBtn"    
            android:textSize="18.0sp" 
            android:textColor="#ff000000"  
            android:background="@anim/cancel_btn_selector"  
            android:layout_width="100dp" 
            android:layout_height="40dp" 
            android:layout_marginTop="20.0dip"  
            android:layout_marginLeft="10.0dip"  
            android:layout_marginRight="10.0dip" 
            android:text="@string/cancel"
            android:layout_alignParentRight="true"
      />
  </RelativeLayout>
</LinearLayout>